deploy/kubernetes/cluster-collector.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  name: cluster-collector
  namespace: checkmk-monitoring
  labels:
    app: cluster-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-collector
  template:
    metadata:
      labels:
        app: cluster-collector
    spec:
      containers:
        - name: cluster-collector
          image: checkmk/kubernetes-collector:main_<YYYY.MM.DD>
          imagePullPolicy: Always
          volumeMounts:
            - name: cluster-collector-key
              mountPath: /etc/ca-certificates/cluster-collector-key.pam
              subPath: cluster-collector-key.pam
              readOnly: true
            - name: cluster-collector-cert
              mountPath: /etc/ca-certificates/cluster-collector-cert.pam
              subPath: cluster-collector-cert.pam
              readOnly: true
            # gunicorn needs a writeable /tmp and runs best with ram backed /tmp
            # https://docs.gunicorn.org/en/latest/faq.html#blocking-os-fchmod
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /health
              port: api
              httpHeaders:
                - name: status
                  value: available
              # HTTP/HTTPS: Change scheme to HTTP
              scheme: HTTPS
            initialDelaySeconds: 3
            periodSeconds: 10
          command:
            - "/usr/local/bin/checkmk-cluster-collector"
          # HTTP / HTTPS: Remove ssl-keyfile, ssl-certfile, secure-protocol from args for HTTP
          args:
            - "--host=0.0.0.0"
            - "--ssl-keyfile=/etc/ca-certificates/cluster-collector-key.pam"
            - "--ssl-certfile=/etc/ca-certificates/cluster-collector-cert.pam"
            - "--secure-protocol"
            - "--reader-whitelist=checkmk-monitoring:checkmk"
            - "--writer-whitelist=checkmk-monitoring:node-collector-container-metrics,checkmk-monitoring:node-collector-machine-sections"
          ports:
            - containerPort: 10050
              name: api
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 2000Mi
            requests:
              cpu: 150m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
      serviceAccountName: cluster-collector
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cluster-collector-key
          secret:
            secretName: cluster-collector-secret
            items:
              - key: cluster-collector-key
                path: cluster-collector-key.pam
        - name: cluster-collector-cert
          secret:
            secretName: cluster-collector-secret
            items:
              - key: cluster-collector-cert
                path: cluster-collector-cert.pam
