deploy/kubernetes/node-collector-cadvisor.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  labels:
    app: node-collector-cadvisor
  name: cadvisor
  namespace: checkmk-monitoring
spec:
  selector:
    matchLabels:
      app: node-collector-cadvisor
      name: node-collector-cadvisor
  template:
    metadata:
      labels:
        app: node-collector-cadvisor
        name: node-collector-cadvisor
    spec:
      containers:
        - image: checkmk/cadvisor-patched:main_<YYYY.MM.DD>
          imagePullPolicy: Always
          name: cadvisor
          command:
            - "/usr/bin/cadvisor"
          args:
            - "--housekeeping_interval=30s"
            - "--max_housekeeping_interval=35s"
            - "--event_storage_event_limit=default=0"
            - "--event_storage_age_limit=default=0"
            - "--store_container_labels=false"
            - "--whitelisted_container_labels=io.kubernetes.container.name,io.kubernetes.pod.name,io.kubernetes.pod.namespace,io.kubernetes.pod.uid"
            - "--global_housekeeping_interval=30s"
            - "--event_storage_event_limit=default=0"
            - "--event_storage_age_limit=default=0"
            - "--disable_metrics=percpu,process,sched,tcp,udp,diskIO,disk,network"
            - "--allow_dynamic_housekeeping=true"
            - "--storage_duration=1m0s"
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 150m
              memory: 200Mi
          volumeMounts:
            - name: var-run
              mountPath: /var/run
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker
              readOnly: true
      serviceAccountName: node-collector-cadvisor
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: var-run
          hostPath:
            path: /var/run
        - name: sys
          hostPath:
            path: /sys
        - name: docker
          hostPath:
            path: /var/lib/docker
