deploy/kubernetes/node-collector.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  labels:
    app: node-collector
  name: node-collector
  namespace: checkmk-monitoring
spec:
  selector:
    matchLabels:
      app: node-collector
      name: node-collector
  template:
    metadata:
      labels:
        app: node-collector
        name: node-collector
    spec:
      containers:
        - image: lisapichlertribe29/kubernetes-collector:2.1.0i1
          imagePullPolicy: Always
          name: machine-sections-collector
          command:
            - "/usr/local/bin/checkmk-machine-sections-collector"
          args:
            - "--secure-protocol"
          resources:
            limits:
              cpu: 300m
              memory: 2000Mi
            requests:
              cpu: 150m
              memory: 200Mi
        - image: lisapichlertribe29/kubernetes-collector:2.1.0i1
          imagePullPolicy: Always
          name: container-metrics-collector
          command:
            - "/usr/local/bin/checkmk-container-metrics-collector"
          args:
            - "--secure-protocol"
          resources:
            limits:
              cpu: 300m
              memory: 2000Mi
            requests:
              cpu: 150m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
        - image: lisapichlertribe29/cadvisor-patched:2.1.0i1
          imagePullPolicy: Always
          name: cadvisor
          command:
            - "/usr/bin/cadvisor"
          args:
            - "--housekeeping_interval=30s"
            - "--max_housekeeping_interval=35s"
            - "--event_storage_event_limit=default=0"
            - "--event_storage_age_limit=default=0"
            - "--store_container_labels=false"
            - "--whitelisted_container_labels=io.kubernetes.container.name,io.kubernetes.pod.name,io.kubernetes.pod.namespace,io.kubernetes.pod.uid"
            - "--global_housekeeping_interval=30s"
            - "--event_storage_event_limit=default=0"
            - "--event_storage_age_limit=default=0"
            - "--disable_metrics=percpu,process,sched,tcp,udp,diskIO,disk,network"
            - "--allow_dynamic_housekeeping=true"
            - "--storage_duration=1m0s"
          resources:
            limits:
              cpu: 300m
              memory: 2000Mi
            requests:
              cpu: 150m
              memory: 200Mi
          volumeMounts:
            - name: var-run
              mountPath: /var/run
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker
              readOnly: true
      serviceAccountName: node-collector-cadvisor
      terminationGracePeriodSeconds: 30
      volumes:
        - name: var-run
          hostPath:
            path: /var/run
        - name: sys
          hostPath:
            path: /sys
        - name: docker
          hostPath:
            path: /var/lib/docker
