deploy/kubernetes/network-policy.yaml
---
# Deny all incoming/outgoing traffic to/from cluster-collector
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-egress-cluster-collector-policy
  namespace: checkmk-monitoring
spec:
  podSelector:
    matchLabels:
      app: cluster-collector
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
---
# Deny all incoming/outgoing traffic to/from node-collector
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-egress-node-collector-policy
  namespace: checkmk-monitoring
spec:
  podSelector:
    matchLabels:
      app: node-collector
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
---
# Allow incoming traffic from node-collector to cluster-collector
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-cluster-collector
  namespace: checkmk-monitoring
spec:
  podSelector:
    matchLabels:
      app: cluster-collector
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: checkmk-monitoring
          podSelector:
            matchLabels:
              app: node-collector
---
# Allow outgoing traffic from node-collector to cluster-collector
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-node-collector
  namespace: checkmk-monitoring
spec:
  podSelector:
    matchLabels:
      app: node-collector
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: checkmk-monitoring
          podSelector:
            matchLabels:
              app: cluster-collector
---
# Allow traffic from Checkmk monitoring server
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-checkmk-server
  namespace: checkmk-monitoring
spec:
  podSelector:
    matchLabels:
      app: cluster-collector
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            # Node IP of the cluster-colletor pod or the metallb pod
            cidr: '127.0.0.1/24'
        - ipBlock:
            # Checkmk IP
            cidr: '127.0.0.1/32'
